--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
-    body {
-        background-color: whitesmoke
-    }
+  body {
+    background-color: whitesmoke;
+  }
 }
 
 .progress-custom {
@@ -28,22 +27,54 @@
 }
 
 .slick-slide > div {
-  margin: 0 10px;   
-}
-
-
-.slick-next {
-  /* color: #aa2d5a ; */
+  margin: 0 10px;
 }
 
 .slick-dots li button:before {
-  color: #efb2d0; /* Kolor kropek */
+  color: #efb2d0;
 }
 
 .slick-dots li.slick-active button:before {
-  color: #762541; /* Kolor aktywnej kropki */
+  color: #762541;
 }
 
-.slick-next button:before {
-    color: #aa2d5a; /* Kolor kropek */
-  }
+.slick-arrow.slick-next,
+.slick-arrow.slick-prev {
+  background-color: #aa2d5a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  opacity: 0.8;
+  height: 30px;
+  width: 30px;
+ 
+}
+
+.slick-arrow.slick-next {
+    padding-left: 3px;
+    right: -50px;
+}
+
+.slick-arrow.slick-prev {
+    vertical-align: center;
+    padding-right: 3px;
+    left: -50px;
+}
+
+.slick-arrow.slick-next:hover,
+.slick-arrow.slick-prev:hover {
+  background-color: #aa2d5a;
+  opacity: 1;
+}
+
+.slick-prev::before,
+.slick-next::before {
+  display: none;
+}
+
+.arrows {
+  height: 20px;
+  width: 20px;
+  margin: 1px;
+}
