--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&display=swap');
 
 @layer base {
   body {
-    background-color: whitesmoke;
+    background-color: #ffffff;
+    font-family: Merriweather;
   }
 }
 
