--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,10 @@
     box-shadow: inset 5px 5px 10px rgba(165, 49, 106, 0.3), 
                 inset -3px -3px 5px rgba(255, 255, 255, 1);
   }
+  .custom-shadow {
+    @apply shadow-inner;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3), 
+  }
 }
 
 .progress-custom {
@@ -38,17 +42,19 @@
 }
 
 .progress-custom::-webkit-progress-bar {
-  background-color: #e9e0e4;
+  background-color: #73284c;
 }
 
 .progress-custom::-webkit-progress-value {
-  background-color: #aa2d5a;
+  background-color: #f9eaf4;
   border-radius: 10px;
+
 }
 
 .progress-custom::-moz-progress-bar {
-  background-color: #aa2d5a;
+  background-color: #f9eaf4;
   border-radius: 5px;
+
 }
 
 .slick-slide > div {
@@ -103,3 +109,6 @@
   width: 20px;
   margin: 1px;
 }
+
+
+
