--- a/src/index.css
+++ b/src/index.css
@@ -125,5 +125,17 @@
   margin: 1px;
 }
 
-
+@media only screen and (max-width: 576px) {
+  .slick-arrow.slick-next,
+.slick-arrow.slick-prev {
+  height: 20px;
+  width: 20px; 
+}
+.slick-arrow.slick-next {
+  right: -35px;
+}
+.slick-arrow.slick-prev {
+  left: -35px;
+}
+}
 
